# Demeter

./: .README.md.swp  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  pyproject.toml
.github/workflows/: cmake-multi-platform.yml
cmake/: clang-cxx-dev-tools.cmake
examples/: CMakeLists.txt  loop_omp.cpp  main  main.cpp  matrix_eigen.cpp  t1.ipynb  test0.cpp  test_omp.cpp
src/: README.md  spec.md
src/core/: spec.md
src/demeter/: README.md  __init__.py  common.hpp  globals.hpp  model.hpp  quadrature.hpp  solve.hpp
src/demeter/_demeter/: __init__.py
src/demeter/binding/: material.cpp
src/demeter/common/: define.cpp  define.hpp  utils.cpp  utils.hpp
src/demeter/model/: boundary.hpp  cell.cpp  cell.hpp  lattice.cpp  lattice.hpp  material.bind.cpp  material.cpp  material.hpp
src/demeter/quadrature/: :  :!  gauss_legendre.cpp  gauss_legendre.hpp  w
src/demeter/solve/: linear_solver.cpp  linear_solver.hpp  methods.hpp  solver.cpp  solver.hpp
src/demeter/solve/methods/: angular.hpp  spatial.hpp
src/demeterpy/: __init__.py
src/model/: material.cpp  material.hpp  spec.md
tests/benchmark/: iaea2d.cpp
tests/regress/: test00.py
utils/: gauss_legendre.txt  gauss_legendre_weights.py  weights_and_roots.txt
